--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,13 @@
 <mat-toolbar>
-  <button mat-icon-button aria-label="Menu hamburger icon">
+  <button mat-icon-button [mat-menu-trigger-for]="menu">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Dominik Tracz</span>
+  <button mat-button routerLink="/">Dominik Tracz</button>
   <span class="spacer"></span>
 </mat-toolbar>
+
+<mat-menu #menu>
+  <button mat-menu-item *ngFor="let m of menuOptions" [routerLink]="m.route">
+    {{ m.displayedName }}
+  </button>
+</mat-menu>
